--- a/todos/package.json
+++ b/todos/package.json
@@ -25,9 +25,11 @@
   "dependencies": {
     "deep-freeze": "0.0.1",
     "expect": "^1.14.0",
+    "node-uuid": "^1.4.8",
     "react": "^0.14.7",
     "react-dom": "^0.14.7",
     "react-redux": "^4.4.0",
+    "react-router": "^2.4.0",
     "redux": "^3.3.1"
   }
 }
