--- a/todos/package.json
+++ b/todos/package.json
@@ -1,35 +1,41 @@
 {
-  "name": "getting-started-with-redux",
-  "version": "1.0.0",
-  "description": "Code from Getting Started with Redux",
-  "main": "main.js",
+  "name": "redux-todos-example",
+  "version": "0.0.0",
+  "description": "Redux Todos example",
   "scripts": {
-    "start": "webpack-dev-server -d",
-    "build": "webpack",
-    "lint": "eslint ."
+    "start": "babel-node devServer.js",
+    "lint": "eslint src"
   },
-  "keywords": [],
-  "author": "robin@robinmurphy.co.uk",
-  "license": "ISC",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/gaearon/todos.git"
+  },
+  "license": "MIT",
+  "dependencies": {
+    "babel-polyfill": "^6.3.14",
+    "lodash": "^4.11.2",
+    "node-uuid": "^1.4.7",
+    "react": "^15.0.2",
+    "react-dom": "^15.0.2",
+    "react-redux": "^4.4.5",
+    "react-router": "^2.4.0",
+    "redux": "^3.5.2"
+  },
   "devDependencies": {
-    "babel-core": "^6.6.5",
-    "babel-loader": "^6.2.4",
+    "babel-cli": "^6.7.7",
+    "babel-core": "^6.3.15",
+    "babel-loader": "^6.2.0",
+    "babel-plugin-transform-object-rest-spread": "^6.6.5",
     "babel-preset-es2015": "^6.6.0",
     "babel-preset-react": "^6.5.0",
-    "babel-preset-stage-2": "^6.5.0",
-    "eslint": "^2.3.0",
-    "eslint-plugin-react": "^4.2.0",
-    "webpack": "^1.12.14",
-    "webpack-dev-server": "^1.14.1"
-  },
-  "dependencies": {
-    "deep-freeze": "0.0.1",
-    "expect": "^1.14.0",
-    "node-uuid": "^1.4.8",
-    "react": "^0.14.7",
-    "react-dom": "^0.14.7",
-    "react-redux": "^4.4.0",
-    "react-router": "^2.4.0",
-    "redux": "^3.3.1"
+    "babel-register": "^6.3.13",
+    "eslint": "^2.9.0",
+    "eslint-config-airbnb": "^8.0.0",
+    "eslint-plugin-import": "^1.6.1",
+    "eslint-plugin-jsx-a11y": "^1.0.4",
+    "eslint-plugin-react": "^5.0.1",
+    "express": "^4.13.3",
+    "webpack": "^1.9.11",
+    "webpack-dev-middleware": "^1.2.0"
   }
 }
